# DTN_Test_Bed

./: .gitignore  DTN_Experiment_Results.xlsx  README.md  experiment_results.json  experiment_results_partial.json  populate_sheets.gs
docs/: MCP.md  architecture.md  setup.md
dtn-mcp/: README.md  pyproject.toml
dtn-mcp/dtn_mcp/: __init__.py  __main__.py  config.py  server.py
frontend/: .env  index.html  package.json  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: main.tsx
frontend/src/api/: client.ts  websocket.ts
frontend/src/app/: App.tsx
frontend/src/components/: Panel.tsx
frontend/src/hooks/: useDashboardData.ts
frontend/src/lib/: dashboardEndpoints.ts  format.ts  piStatusHeartbeat.ts
frontend/src/styles/: app.css  theme.css
frontend/src/types/: index.ts
mac-backend/: .env  config.py  main.py  requirements.txt
mac-backend/api_server/: server.py
mac-backend/config_server/: server.py
mac-backend/dtn_receiver_bridge/: bridge.py
mac-backend/shared/: schemas.py  store.py
pi-agent/: .env  config.py  experiment.py  main.py  requirements.txt  schemas.py
pi-agent/dtn_sender/: dtn_adapter.py  dtn_sender.py
pi-agent/gps_reader/: gps_reader.py
pi-agent/link_manager/: link_manager.py
pi-agent/mgmt_client/: mgmt_client.py
pi-agent/netem_agent/: netem_agent.py
pi-agent/queue_manager/: queue_manager.py
pi-agent/systemd/: pi-agent.service  ud3tn-pi.service
scripts/: setup_mac.sh  setup_pi.sh  start_mac_dtn.sh  start_mac_stack.sh  start_pi_stack.sh
scripts/sd-first-boot/: README.txt  prepare_boot_volume.sh
(+16 files in other folders)
